--- a/demo/index.htm
+++ b/demo/index.htm
@@ -7,6 +7,7 @@
 
 <style type="text/css" media="all">
 @import "css/global.css";
+@import "../src/jtip.css";
 </style>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js" type="text/javascript"></script>
