--- a/demo/index.htm
+++ b/demo/index.htm
@@ -22,6 +22,9 @@
 </head>
 <body>
 <div id="contentPad">
+	
+<a name="This is an example" href="ajax.htm" class="jTip">Example</a>	
+
 <p><a href="http://github.com/stuartloxton/jtip2/tree/master" class="jTipRel" rel="#inlineWhatis">What is this?</a></p>
 
 <p><strong>Roll over a question mark:</strong></p>
