--- a/demo/index.htm
+++ b/demo/index.htm
@@ -36,7 +36,7 @@
 
 <label style="padding-right:5px">User ID</label><input name="" type="text" /><span class="formInfo"><a href="ajax2.htm?width=475" class="jTip" id="two" name="">?</a></span>
 
-<p><strong>Now supports <a href=":json.js:examples:json" class="jTip">JSON tooltips</a></strong>
+<p><strong>Now supports <a href=":json.js:examples:json" class="jTip">JSON tooltips</a>&hellip; here is <a href=":json.js:examples:secondTip" class="jTip">another tip</a> from the same page.</strong>
 
 
 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut <a href="ajax4.htm?width=475" class="jTip" id="six" name="Window caption or title">Tip With Caption</a> enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
