Removed the init functions meaning users must declare which elements trigger tooltips, can now preload AJAX and JSON URL's

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -15,7 +15,10 @@
 
 <script type="text/javascript" charset="utf-8">
 	jQuery(function() {
+		jQuery.jTipPreloadJSON('json.js');
+		jQuery('a.jTip').jTipOn('href');
 		jQuery('a.jTipRel').jTipOn('rel');
+		//console.log(jTip2.downloaded['json.js']);
 	});
 </script>
 
